# cpp_simple_client

./: .gitignore  CMakeLists.txt  Makefile  README.md  curl  curlObj.cpp  curlObj.hpp  jsonParsing.cpp  jsonParsing.hpp  main.c  main.cpp  util.c
modules/: notion.cpp
